# Aeyian-Wallpaper-Engine

./: .gitignore  CMakeLists.txt  README.md  install.sh
docs/: Changelog.md
src/editor/: AWC.py  AWE.py
src/editor/layers/: L_Dialog.py  __init__.py
src/runtime/config/: main.xml
src/runtime/plugin/: CMakeLists.txt  cursorprovider.cpp  cursorprovider.h  metadata.json  metadatawithcomments.txt  plugin.cpp  qmldir
src/runtime/qml/: config.qml  cursor.qml  main.qml
